1.9.0: Equipment Attribute Listener
- Reads armor slots and off-hand slot clicks to update equipment attributes